// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #24292e;
  background-color: #fafbfc;
  border: 1px solid rgba(27,31,35,0.12);
  box-shadow: 0px 1px 0px rgba(27,31,35,0.04),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #F3F4F6;
  box-shadow: 0px 1px 0px rgba(209,213,218,0.2),inset 0px 2px 0px rgba(255,255,255,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

.c0:active {
  background-color: #edeff2;
  box-shadow: inset 0px 2px 0px rgba(149,157,165,0.1);
  border-color: #d1d5da;
}

.c0:disabled {
  color: #959da5;
  background-color: #fafbfc;
  border-color: #eaecef;
}

<button
  className="c0"
/>
`;

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #24292e;
  background-color: #fafbfc;
  border: 1px solid rgba(27,31,35,0.12);
  box-shadow: 0px 1px 0px rgba(27,31,35,0.04),inset 0px 2px 0px rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #F3F4F6;
  box-shadow: 0px 1px 0px rgba(209,213,218,0.2),inset 0px 2px 0px rgba(255,255,255,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

.c0:active {
  background-color: #edeff2;
  box-shadow: inset 0px 2px 0px rgba(149,157,165,0.1);
  border-color: #d1d5da;
}

.c0:disabled {
  color: #959da5;
  background-color: #fafbfc;
  border-color: #eaecef;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonDanger renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #d73a49;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #fafbfc;
  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #cb2431;
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(203,36,49,0.4);
}

.c0:active {
  color: #ffffff;
  background-color: #d42d3d;
  box-shadow: inset 0 1px 0 rgba(134,24,29,0.2);
  border-color: rgba(27,31,35,0.15);
}

.c0:disabled {
  color: rgba(215,58,73,0.5);
  background-color: #fafbfc;
}

<button
  className="c0"
/>
`;

exports[`ButtonDanger renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #d73a49;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #fafbfc;
  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #cb2431;
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(203,36,49,0.4);
}

.c0:active {
  color: #ffffff;
  background-color: #d42d3d;
  box-shadow: inset 0 1px 0 rgba(134,24,29,0.2);
  border-color: rgba(27,31,35,0.15);
}

.c0:disabled {
  color: rgba(215,58,73,0.5);
  background-color: #fafbfc;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonGroup renders consistently 1`] = `
.c0 {
  display: inline-block;
  display: inline-block;
  vertical-align: middle;
}

.c0.c0 > * {
  position: relative;
  border-right-width: 0;
  border-radius: 0;
}

.c0.c0 > *:first-child {
  border-top-left-radius: 6px;
  border-bottom-left-radius: 6px;
  margin-right: 0;
}

.c0.c0 > *:not(:first-child) {
  margin-left: 0;
  margin-right: 0;
}

.c0.c0 > *:last-child {
  border-right-width: 1px;
  border-top-right-radius: 6px;
  border-bottom-right-radius: 6px;
}

.c0.c0 > *:focus,
.c0.c0 > *:active,
.c0.c0 > *:hover {
  border-right-width: 1px;
}

.c0.c0 > *:focus + *,
.c0.c0 > *:active + *,
.c0.c0 > *:hover + * {
  border-left-width: 0;
}

.c0.c0 > *:focus,
.c0.c0 > *:active {
  z-index: 1;
}

<div
  className="c0"
  display="inline-block"
/>
`;

exports[`ButtonInvisible renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0366d6;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #fafbfc;
  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #0366d6;
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(0,92,197,0.4);
}

.c0:active {
  color: #ffffff;
  background-color: #035fc7;
  box-shadow: inset 0 1px 0 rgba(5,38,76,0.2);
  border-color: rgba(27,31,35,0.15);
}

.c0:disabled {
  color: rgba(3,102,214,0.5);
  background-color: #fafbfc;
  border-color: rgba(27,31,35,0.15);
}

<button
  className="c0"
/>
`;

exports[`ButtonInvisible renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0366d6;
  background-color: transparent;
  border: 0;
  border-radius: 6px;
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:disabled {
  color: #959da5;
}

.c0:focus {
  box-shadow: 0 0 0 3px rgba(3,102,214,0.3);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonOutline renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0366d6;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #fafbfc;
  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #0366d6;
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(0,92,197,0.4);
}

.c0:active {
  color: #ffffff;
  background-color: #035fc7;
  box-shadow: inset 0 1px 0 rgba(5,38,76,0.2);
  border-color: rgba(27,31,35,0.15);
}

.c0:disabled {
  color: rgba(3,102,214,0.5);
  background-color: #fafbfc;
  border-color: rgba(27,31,35,0.15);
}

<button
  className="c0"
/>
`;

exports[`ButtonOutline renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0366d6;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #fafbfc;
  box-shadow: 0 1px 0 rgba(27,31,35,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #0366d6;
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(0,92,197,0.4);
}

.c0:active {
  color: #ffffff;
  background-color: #035fc7;
  box-shadow: inset 0 1px 0 rgba(5,38,76,0.2);
  border-color: rgba(27,31,35,0.15);
}

.c0:disabled {
  color: rgba(3,102,214,0.5);
  background-color: #fafbfc;
  border-color: rgba(27,31,35,0.15);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonPrimary renders consistently 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #ffffff;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #2ea44f;
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #2c974b;
  border-color: rgba(27,31,35,0.15);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(46,164,79,0.4);
}

.c0:active {
  background-color: #2a8f47;
  box-shadow: inset 0 1px 0 rgba(20,70,32,0.2);
}

.c0:disabled {
  color: rgba(255,255,255,0.8);
  background-color: #94d3a2;
  border-color: rgba(27,31,35,0.1);
}

<button
  className="c0"
/>
`;

exports[`ButtonPrimary renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #ffffff;
  border: 1px solid rgba(27,31,35,0.15);
  background-color: #2ea44f;
  box-shadow: 0 1px 0 rgba(27,31,35,0.1);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #2c974b;
  border-color: rgba(27,31,35,0.15);
}

.c0:focus {
  border-color: rgba(27,31,35,0.15);
  box-shadow: 0 0 0 3px rgba(46,164,79,0.4);
}

.c0:active {
  background-color: #2a8f47;
  box-shadow: inset 0 1px 0 rgba(20,70,32,0.2);
}

.c0:disabled {
  color: rgba(255,255,255,0.8);
  background-color: #94d3a2;
  border-color: rgba(27,31,35,0.1);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonTableList renders consistently 1`] = `
.c0 {
  display: inline-block;
  padding: 0;
  font-size: 14px;
  color: #586069;
  -webkit-text-decoration: none;
  text-decoration: none;
  white-space: nowrap;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  border: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:disabled,
.c0:disabled:hover {
  color: rgba(#586069,0.5);
  cursor: default;
}

.c0:after {
  display: inline-block;
  margin-left: 4px;
  width: 0;
  height: 0;
  vertical-align: -2px;
  content: '';
  border: 4px solid transparent;
  border-top-color: currentcolor;
}

<summary
  className="c0"
/>
`;
